--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="header-right">
                 <div class="model-selector">
-                    LLaMA3-70b-chat
+                    Aviation-GPT
                     <i class="fas fa-sliders"></i>
                 </div>
             </div>
